# rero-ebooks

./: .editorconfig  .github_changelog_generator  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGES.md  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.base  INSTALL.rst  MANIFEST.in  Pipfile  README.rst  RELEASE-NOTES.md  SECURITY.rst  babel.ini  docker-compose.full.yml  docker-compose.yml  docker-services.yml  frontend.tmpl  pyproject.toml  pytest.ini  requirements-devel.txt  requirements.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: continuous-integration-test.yml
.tx/: config
data/: apisources.yml  cantook-vs.json  ebooks.xml  oaisets.yml  oaisources.yml
deployment/: Dockerfile  __init__.py
deployment/kubernetes/: ebooks-cache-deployment.yml  ebooks-cache-service.yml  ebooks-db-deployment.yml  ebooks-db-service.yml  ebooks-frontend-deployment.yml  ebooks-frontend-service.yml  ebooks-indexer-deployment.yml  ebooks-indexer-service.yml  ebooks-scheduler-deployment.yml  ebooks-tasks-deployment.yml  ebooks-tasksui-deployment.yml  ebooks-tasksui-service.yml  ebooks-worker-deployment.yml  ebooks-worker-service.yml
docker/: wait-for-services.sh
docker/haproxy/: Dockerfile  haproxy.cfg  haproxy_cert.pem
docker/nginx/: Dockerfile  nginx.conf  test.crt  test.key
docker/nginx/conf.d/: default.conf
docker/postgres/: Dockerfile  init-app-db.sh
docker/uwsgi/: uwsgi_rest.ini  uwsgi_ui.ini
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  license.rst  make.bat  usage.rst
rero_ebooks/: __init__.py  api.py  bundles.py  celery.py  cli.py  config.py  ext.py  fetchers.py  minters.py  providers.py  receivers.py  tasks.py  utils.py  version.py  views.py
rero_ebooks/apiharvester/: __init__.py  cli.py  errors.py  models.py  tasks.py  utils.py
rero_ebooks/cantook/: __init__.py  api.py
rero_ebooks/dojson/: __init__.py  utils.py
rero_ebooks/dojson/json/: __init__.py  model.py
rero_ebooks/dojson/marc21/: __init__.py  model.py
rero_ebooks/dojson/marc21/fields/: bd00x.py  bd01x09x.py  bd1xx.py  bd20x24x.py  bd25x28x.py  bd3xx.py  bd4xx.py  bd5xx.py  bd6xx.py  bd70x75x.py  bd76x78x.py  bd80x83x.py  bd84188x.py  bdleader.py
rero_ebooks/mappings/: __init__.py
rero_ebooks/mappings/v6/ebooks/: ebook-v1.0.0.json
rero_ebooks/mappings/v7/: __init__.py
rero_ebooks/mappings/v7/ebooks/: ebook-v1.0.0.json
rero_ebooks/static/xsl/: oai.xsl
rero_ebooks/templates/rero_ebooks/: frontpage.html  header.html
rero_ebooks/theme/: __init__.py  views.py  webpack.py
rero_ebooks/theme/assets/scss/rero_ebooks/: ebooks.scss
rero_ebooks/theme/templates/rero_ebooks/: frontpage.html  header.html  page_error.html
scripts/: __init__.py  bootstrap  console  server  setup  test  update  worker_beat
tests/: conftest.py  test_version.py
tests/api/: conftest.py  test_api.py  test_cantook.py  test_fetchers.py  test_minters.py
tests/data/: apisource-nj.yml  data.json
tests/e2e/: conftest.py  test_front_page.py
tests/ui/: conftest.py  test_views.py
tests/unit/: test_apiharvester_cli.py  test_dojson.py
