[tool.poetry]
name = "rero-ebooks"
version = "0.6.0"
description = "Ebooks repository for RERO."
authors = ["RERO <software@rero.ch>"]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.10"
## Python packages dependencies (order matters)
#------------------------------------------------------------------------------
## Note: poetry evaluates the package constraints from the top to the bottom
## and respects only the last constraint to install the package.
## Thus the most strength constraint should be at the end.
## Imagine the following package list for the foo package with the
## most recent version equal to 5.0:
## A foo Pipfile example:
## ----------------------
## foo = ">1.0" # first will install 5.0
## foo = "==1.0" # then will downgrade to 1.0
## foo = ">3.0" # finally will upgrade to 5.0
## when the python code will be executed a conflict exception will be raised.
#------------------------------------------------------------------------------
# Default from Invenio
lxml = ">=4.3.0,<5.0.0"
# TODO: from not working with marshmallow > 3.0.0
marshmallow = ">=3.0.0,<4.0.0"
uwsgi = ">=2.0"
uwsgi-tools = ">=1.1.1"
uwsgitop = ">=0.11"

## Third party invenio modules used by RERO ILS
invenio-oaiharvester = {tag = "v1.0.0a4", git = "https://github.com/inveniosoftware/invenio-oaiharvester.git"}

## Invenio 3.4 base modules used by RERO ILS
# same as invenio metadata extras without invenio-search-ui
invenio-indexer = ">=1.2.0,<1.3.0"
invenio-jsonschemas = ">=1.1.1,<1.2.0"
invenio-oaiserver = ">=1.2.0,<1.3.0"
invenio-pidstore = ">=1.2.1,<1.3.0"
invenio-records-rest = ">=1.8.0,<1.9.0"
invenio-records-ui= ">=1.2.0,<1.3.0"
invenio-records = ">=1.4.0,<1.6.0"

## Default from Invenio
invenio = {version = ">=3.4.0,<5.4.0", extras = ["base", "postgresql", "auth", "elasticsearch7", "docs", "tests" ]}

# TODO: jedi > 0.17 crashs the console
jedi = "<0.18.0"

## RERO ILS specific python modules
PyYAML = ">=5.3.1"
isbnlib = ">=3.9.1"
requests = ">=2.20.0"
responses = "*"

## Deployment
# sentry
invenio-logging = { version = ">=1.3.0,<1.4.0", extras = ["sentry-sdk", "sentry"] }
python-dotenv = ">=0.13.0"
python-dateutil = "^2.8.1"

## Third party optional modules used by RERO ILS
celery = ">=5.0.0"
pycparser = ">=2.0"

[tool.poetry.dev-dependencies]
## Python packages development dependencies (order matters)
#----------------------------------------------------------
## Default from Invenio
pytest-invenio = ">=1.4.0,<1.5.0"
Sphinx = ">=3,<3.4.2"
docutils = "<0.18.0"
Flask-Debugtoolbar = ">=0.10.1"
## RERO ILS specific python packages
safety = ">=1.8"
mock = ">=2.0.0"
autoflake = ">=1.3.1"
appnope = { version = "*", optional = true }

[tool.poetry.scripts]
bootstrap = "scripts:run('./scripts/bootstrap')"
console = "scripts:run('./scripts/console')"
run-tests = "scripts:run('./run-tests.sh')"
server = "scripts:run('./scripts/server')"
setup = "scripts:run('./scripts/setup')"
tests = "scripts:run('pytest')"
update = "scripts:run('./scripts/update')"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
